// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test users reducer should get message about a problem with authentication 1`] = `
Object {
  "buildings": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "units": Array [],
}
`;

exports[`test users reducer should get message about buildings list's not finding 1`] = `
Object {
  "buildings": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "units": Array [],
}
`;

exports[`test users reducer should get message about units list's not finding 1`] = `
Object {
  "buildings": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "units": Array [],
}
`;

exports[`test users reducer should load buildings list 1`] = `
Object {
  "buildings": Array [
    Object {
      "_id": "1111-2222-3333-4444",
      "name": "Budynki Knights and Merchants",
    },
  ],
  "errorMessage": "Pozytywna wiadomość z serwera!",
  "message": "Pozytywna wiadomość z serwera!",
  "units": Array [],
}
`;

exports[`test users reducer should load units list 1`] = `
Object {
  "buildings": Array [],
  "errorMessage": "Pozytywna wiadomość z serwera!",
  "message": "Pozytywna wiadomość z serwera!",
  "units": Array [
    Object {
      "_id": "1111-2222-3333-4444",
      "name": "Jednostki Knights and Merchants",
    },
  ],
}
`;
